# pathtracer

./: CMakeLists.txt  LICENSE
src/: camera.cpp  camera.h  main.cpp  material.cpp  material.h  object.h  pathtracer.cpp  pathtracer.h  plane.cpp  plane.h  ray.h  sphere.cpp  sphere.h  texture.cpp  texture.h  types.cpp  types.h  world.cpp  world.h
